--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
+    "@mui/icons-material": "^6.1.3",
     "@mui/material": "^6.1.2",
     "@mui/x-charts": "^7.18.0",
     "@mui/x-date-pickers": "^7.18.0",
